2005-08-29 Duncan Coutts <duncan@coutts.uklinux.net>

	* cairo/Graphics/Rendering/Cairo/Types.chs: merge patches from Paolo;
	move the definition of the Render monad into the Types module.

	* cairo/Graphics/Rendering/Cairo.hs: merge patches from Paolo; add
	haddock documentation for many functions.

2005-08-27 Duncan Coutts <duncan@coutts.uklinux.net>

	* cairo/COPYRIGHT, cairo/cairo.h, cairo/cairo.pkg.in,
	cairo/cairo.package.conf.in, cairo/cairo.cabal.in,
	cairo/Graphics/Rendering/Cairo.hs,
	cairo/Graphics/Rendering/Cairo/Types.chs,
	cairo/Graphics/Rendering/Cairo/Matrix.chs,
	cairo/Graphics/Rendering/Cairo/PDF.hs,
	cairo/Graphics/Rendering/Cairo/PS.hs,
	cairo/Graphics/Rendering/Cairo/Internal.hs,
	cairo/Graphics/Rendering/Cairo/Internal/Utilities.chs
	cairo/Graphics/Rendering/Cairo/Internal/Drawing/Cairo.chs,
	cairo/Graphics/Rendering/Cairo/Internal/Drawing/Paths.chs,
	cairo/Graphics/Rendering/Cairo/Internal/Drawing/Patterns.chs,
	cairo/Graphics/Rendering/Cairo/Internal/Drawing/Text.chs,
	cairo/Graphics/Rendering/Cairo/Internal/Drawing/Transformations.chs,
	cairo/Graphics/Rendering/Cairo/Internal/Fonts/FontOptions.chs,
	cairo/Graphics/Rendering/Cairo/Internal/Surfaces/Surface.chs,
	cairo/Graphics/Rendering/Cairo/Internal/Surfaces/Image.chs
	cairo/Graphics/Rendering/Cairo/Internal/Surfaces/PNG.chs,
	cairo/Graphics/Rendering/Cairo/Internal/Surfaces/PDF.chs,
	cairo/Graphics/Rendering/Cairo/Internal/Surfaces/PS.chs: add cairo
	bindings package by Paolo Martini.

	* gtk/Graphics/UI/Gtk/Cairo.chs.pp: add Gtk/cairo integration module.

	* gtk/Graphics/UI/Gtk.hs: re-export the Graphics.UI.Gtk.Cairo module.

	* configure.ac, Makefile.am: add the cairo package to the build sytem.

	* gtk/gtk.pkg.in, gtk/gtk.package.conf.in, gtk/gtk.cabal.in: make the
	gtk package depend on the cairo package if we're building with cairo.

	* AUTHORS: add Paolo Martini.

	* gtk/Graphics/UI/Gtk/Cairo.chs.pp: make it build correctly.
